# Customer-Churn-Prediction-using-XGBoost

./: DATASET.md  README.md  app.py  data_loader.py  pyproject.toml  requirements.txt  train_model.py
models/: feature_cols.json  feature_importance.csv  metrics.json  scaler.pkl  xgb_model.pkl
