[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Customer Churn Prediction Dashboard using XGBoost and Streamlit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
